# restriction-checker

./: .gitignore  .ocamlinit  LICENSE  dune-project  synopsis.opam
lib/: dune  synopsis.ml  synopsis.mli  utils.ml  utils.mli
